fix(docs): fix page margin flickering

--- a/quarkdown-html/src/main/scss/components/_docs.scss
+++ b/quarkdown-html/src/main/scss/components/_docs.scss
@@ -126,6 +126,11 @@
     }
   }
 
+  // Avoids flickering before the page margin content is handled at runtime.
+  > .content-wrapper > main .page-margin-content:not(footer .page-margin-content) {
+    display: none;
+  }
+
   // Print styles
   @include media-queries.print {
     --qd-background-color: white !important;
